--- a/networking/ingress-app.yaml
+++ b/networking/ingress-app.yaml
@@ -16,13 +16,13 @@ spec:
                 name: forgejo-service
                 port:
                   number: 3000
-    - host: forgejo.localhost
+    - host: n8n.localhost
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: web
+                name: n8n-service
                 port:
-                  number: 8080
+                  number: 5678
