(fix): Ingress from ArgoCD

--- a/apps/ingress/ingress-nginx.yaml
+++ b/apps/ingress/ingress-nginx.yaml
@@ -4,12 +4,11 @@ metadata:
   name: ingress-nginx
   namespace: argocd
 spec:
-  destination:
-    namespace: ingress-nginx
-    server: https://kubernetes.default.svc
   project: default
   source:
+    repoURL: https://kubernetes.github.io/ingress-nginx
     chart: ingress-nginx
+    targetRevision: 4.11.3
     helm:
       values: |-
         controller:
@@ -19,9 +18,13 @@ spec:
             ports:
               http: 81
               https: 444
-    repoURL: https://kubernetes.github.io/ingress-nginx
-    targetRevision: HEAD
+            internal:
+              ports:
+                http: 80
+                https: 443
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: ingress-nginx
   syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
-
+    automated:
+      prune: true
