--- a/charts/forgejo/values.yaml
+++ b/charts/forgejo/values.yaml
@@ -2,18 +2,18 @@ forgejo:
   ingress:
     enabled: true
     className: nginx
-    # annotations:
-    #   kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-issuer
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     hosts:
       - host: git.daglesia.com
         paths:
           - path: /
             pathType: Prefix
-    # tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - git.example.com
+    tls:
+     - secretName: forgejo-tls
+       hosts:
+         - git.daglesia.com
     # Mostly for argocd or any other CI that uses `helm template | kubectl apply` or similar
     # If helm doesn't correctly detect your ingress API version you can set it here.
     # apiVersion: networking.k8s.io/v1
