--- a/charts/cert-manager/templates/issuer.yaml
+++ b/charts/cert-manager/templates/issuer.yaml
@@ -1,14 +1,14 @@
-{{- if .Values.cluster-issuer -}}
+{{- if .Values.clusterIssuer -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {{ include "cluster-issuer.issuer.name" . }}
+  name: {{ include "clusterIssuer.issuer.name" . }}
 spec:
   acme:
-    server: {{ include "cluster-issuer.issuer.server" . }}
-    email: {{ include "cluster-issuer.issuer.email" . }}
+    server: {{ include "clusterIssuer.issuer.server" . }}
+    email: {{ include "clusterIssuer.issuer.email" . }}
     privateKeySecretRef:
-      name: {{ include "cluster-issuer.issuer.key" . }}
+      name: {{ include "clusterIssuer.issuer.key" . }}
     solvers:
     - http01:
         ingress:
