--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -1,5 +1,5 @@
-cert-manager:
-  cluster-issuer:
+certManager:
+  clusterIssuer:
     name: letsencrypt-issuer
     server: https://acme-v02.api.letsencrypt.org/directory
     email: ""
