--- a/charts/jitsi/values.yaml
+++ b/charts/jitsi/values.yaml
@@ -1,17 +1,19 @@
 jitsi:
-  publicUrl: jitsi.daglesia.com
-  ingress:
-    enabled: true
-    className: nginx
-    annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-issuer
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    hosts:
-      - host: jitsi.daglesia.com
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-     - secretName: jitsi-tls
-       hosts:
-         - jitsi.daglesia.com
+  jvb:
+    useHostNetwork: true
+  web:
+    ingress:
+      enabled: true
+      className: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-issuer
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      hosts:
+        - host: jitsi.daglesia.com
+          paths:
+            - path: /
+              pathType: Prefix
+      tls:
+        - secretName: jitsi-tls
+          hosts:
+            - jitsi.daglesia.com
