--- a/apps/generic/jitsi.yaml
+++ b/apps/generic/jitsi.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nextcloud
+  name: jitsi
   namespace: argocd
 spec:
   project: default
