--- a/apps/conf/ingress-nginx.yaml
+++ b/apps/conf/ingress-nginx.yaml
@@ -26,5 +26,7 @@ spec:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
