(experiment): hostPath media path

--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -7,3 +7,7 @@ jellyfin:
         paths:
           - path: /
             pathType: Prefix
+  persistence:
+    media:
+      type: hostPath
+      hostPath: /media
