--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -2,11 +2,18 @@ jellyfin:
   ingress:
     enabled: true
     className: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-issuer
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     hosts:
       - host: media.daglesia.com
         paths:
           - path: /
             pathType: Prefix
+    tls:
+     - secretName: jellyfin-tls
+       hosts:
+         - media.daglesia.com
   persistence:
     media:
       type: hostPath
