--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -10,11 +10,11 @@ jellyfin:
       cert-manager.io/cluster-issuer: letsencrypt-issuer
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     hosts:
-      - host: media.daglesia.com
+      - host: notflix.daglesia.com
         paths:
           - path: /
             pathType: Prefix
     tls:
      - secretName: jellyfin-tls
        hosts:
-         - media.daglesia.com
+         - notflix.daglesia.com
