--- a/charts/joplin/Chart.yaml
+++ b/charts/joplin/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-name: paperless
+name: joplin
 type: application
 version: 0.1.0
 dependencies:
-  - name: paperless
+  - name: joplin-server
     repository: https://k8s-at-home.com/charts/
-    version: ~9.1.3
+    version: ~5.3.2
