--- a/charts/forgejo/Chart.yaml
+++ b/charts/forgejo/Chart.yaml
@@ -4,5 +4,5 @@ type: application
 version: 0.1.0
 dependencies:
   - name: forgejo
-    repository: oci://code.forgejo.org/forgejo-helm
-    version: ~10.0.0
+    repository: "oci://code.forgejo.org/forgejo-helm"
+    version: "10.1.0"
