(feat): Don't use existing PVC on Jellyfin

--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -1,8 +1,8 @@
 jellyfin:
   persistence:
     media:
-      size: 15Gi
-      existingClaim: local-pvc
+      size: 25Gi
+      hostPath: "/media"
   ingress:
     enabled: true
     className: nginx
