--- a/apps/generic/xwiki.yaml
+++ b/apps/generic/xwiki.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: docmost
+  name: xwiki
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Daglesia/domain-infra
-    path: charts/docmost
+    path: charts/xwiki
     targetRevision: HEAD
     helm:
       valueFiles:
