--- a/charts/forgejo/values.yaml
+++ b/charts/forgejo/values.yaml
@@ -1,4 +1,9 @@
 forgejo:
+  gitea:
+    admin:
+      username: secret-forgejo-username
+      password: secret-forgejo-password
+      email: secret-forgejo-email
   ingress:
     enabled: true
     className: nginx
