(fix): Sops encryption not working

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,19 +1,19 @@
 secrets:
-    secret-forgejo-username: ENC[AES256_GCM,data:1GKJhRU=,iv:zXa+yYcOnG23bN8WoKXa1+va4Xv7LhcZMPLpZnZtQr0=,tag:uFnSPgNtpKxhYXGXjOiQLA==,type:str]
-    secret-forgejo-password: ENC[AES256_GCM,data:b20p//ULbiZtHN+yteii,iv:3qaPPvo3ze2iRdOIUKUAaHG8vAluc/S0xQrz+6t4q/I=,tag:pwWLb+lKpAnD+wn19ZQSIA==,type:str]
-    secret-forgejo-email: ENC[AES256_GCM,data:JEiyc/o5uNm1+rR6LF6FURbhYevxUg==,iv:eYvscBwcxvyTW4OZhF/fzn1/z87NtbA7Ll3JIhB0qQY=,tag:7CWi3gwPDLO+L/fVlgswhQ==,type:str]
+    secret-forgejo-username: ENC[AES256_GCM,data:RpfYVTM=,iv:eUGvR75t94333xlKe83vWotwahfuL5fAXc7a17x4u7Q=,tag:nIBAUgOwLel5mg+u654aiQ==,type:str]
+    secret-forgejo-password: ENC[AES256_GCM,data:mDxywt1ll3pa2tK93S20,iv:TVUQcfB9T/ZF7WBykPPF/iWhh5VodJGFgH8T06duQdw=,tag:jfWHkqA2gT+kyFLQHxF0Ow==,type:str]
+    secret-forgejo-email: ENC[AES256_GCM,data:GyYREeSEwzduZDvZ52CKq2nbeZzGiA==,iv:fusRgK3QGGivSehhnWH4J+j3PFUZzuTFMjXMEN6nC44=,tag:Z1yAsWjzjHtDgksieJdX3Q==,type:str]
 sops:
     age:
         - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWeVR4KzhheFNyc2ozZU83
-            dkc1ZytSY2pDOWNiMWdEcWVNZWJ2ZDhEL3g4CkViSEtLYkhYUlRUK1p2TGFzNTZ6
-            V0ErdkwvSytKSC9BMHcvZWFRVWdyNlkKLS0tIENDS0E1RWZoK2VkdHpxckhBQm9x
-            RytHelNTRUU5aklHZDRPQXJJTCtlNTAK8vrgIiM+WUdUzPW8JPU9gGVWC7FTXo6/
-            apTg/XmNd/L1JFO6vjYJSHFEu6ARdKDLs3BE0ReVKPad3VKJ5j2RUA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxayswYldGYTZJNkw0NVZr
+            WEJYUjJPK29WV3AzMElrWjhWZG5HSjJUSkY4CkFxT015RnNLUEF1bzVBMm16UEhC
+            bm8xK0gzL0lqNjcwN3hSU2NrR0tEUTAKLS0tIHpYSk9CM3h6UVJJeDFnZ3RmcHkv
+            SXc0VCtqRWxBSmYrYmdtcmV6K2hha1kK4GNWw4hUVy13J2DeVtabpWsD5emflLQk
+            OMekjv25EUg0Th++FpMI3Mj4/6/h1fp7QKRpOEJpcoxp9mBahzNtKw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-24T09:36:31Z"
-    mac: ENC[AES256_GCM,data:Z25uiBE2OOUBvgmc66uCPk8LX4C1lVQg+ae412cAue47jlate2OUip17Y6vexGke2VtDF9Ol1W6Ywe+O9pSTYRodkceY3c4DR6geg+mYV0TpRdqCwKfaKL8Uv0Q7hyNdQdmuwQRVG+dIvMwz1kGxGIs4R//BHejC1XhD+q/Ejgc=,iv:wQSk0lz5SkxxR8uWpKFEgC++Z0iRb/n/C+AC7QkBMow=,tag:QRR/ClfBJnXhz3t7NkKWZA==,type:str]
-    unencrypted_suffix: _unencrypted
+    lastmodified: "2026-02-24T11:26:02Z"
+    mac: ENC[AES256_GCM,data:2Op8WmGdhmDEVLhK/rjvPOisFCgRv3ALSh/xzn91qDc420THj/LcbJs38yDHjbCEiV7IKZN1ZGJabcLnE7dr2iAFQv1yDw2sOQZRgi1F5S8Rkne+9LHJUQebkDGIosZEG21OlZHqry/C+nzQAzBLfnUaC4+q+BMPGB9Nv59T+fs=,iv:nPowhfOL/IPvIRhqKJkU7wHf4UktPxU0O9igr0aqEg8=,tag:CE17ivopOiUnryqgMfZlnQ==,type:str]
+    encrypted_regex: ^(secrets|.*)$
     version: 3.11.0
