(fix): Forgejo secrets yaml structure

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,19 +1,22 @@
 secrets:
-    secret-forgejo-username: ENC[AES256_GCM,data:RpfYVTM=,iv:eUGvR75t94333xlKe83vWotwahfuL5fAXc7a17x4u7Q=,tag:nIBAUgOwLel5mg+u654aiQ==,type:str]
-    secret-forgejo-password: ENC[AES256_GCM,data:mDxywt1ll3pa2tK93S20,iv:TVUQcfB9T/ZF7WBykPPF/iWhh5VodJGFgH8T06duQdw=,tag:jfWHkqA2gT+kyFLQHxF0Ow==,type:str]
-    secret-forgejo-email: ENC[AES256_GCM,data:GyYREeSEwzduZDvZ52CKq2nbeZzGiA==,iv:fusRgK3QGGivSehhnWH4J+j3PFUZzuTFMjXMEN6nC44=,tag:Z1yAsWjzjHtDgksieJdX3Q==,type:str]
+    forgejo-username:
+        username: ENC[AES256_GCM,data:85Uc0e0=,iv:t5lIcl7sx3nww4g7jwYqa5nPZLEGn1ilZcmn9PG1/3c=,tag:DMN6HosuRJigOAmKu5YSQw==,type:str]
+    forgejo-password:
+        password: ENC[AES256_GCM,data:3eZwVH02GFEjStAVf9L6,iv://+srTBtS3WOtmF9cxebm7XldIVvSV90guBNM1StISo=,tag:Q2oygKEqDOokJcRQpGiaeQ==,type:str]
+    forgejo-email:
+        email: ENC[AES256_GCM,data:ejbPEPoj/RxscvVnbPopAznQJKmgPA==,iv:zyD7gOVI/m7VVK+ygYVPbhNkXlvGrj8sclGAMu7U4Fg=,tag:g+7lr8VotdiEoNPPHGqwDQ==,type:str]
 sops:
     age:
         - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxayswYldGYTZJNkw0NVZr
-            WEJYUjJPK29WV3AzMElrWjhWZG5HSjJUSkY4CkFxT015RnNLUEF1bzVBMm16UEhC
-            bm8xK0gzL0lqNjcwN3hSU2NrR0tEUTAKLS0tIHpYSk9CM3h6UVJJeDFnZ3RmcHkv
-            SXc0VCtqRWxBSmYrYmdtcmV6K2hha1kK4GNWw4hUVy13J2DeVtabpWsD5emflLQk
-            OMekjv25EUg0Th++FpMI3Mj4/6/h1fp7QKRpOEJpcoxp9mBahzNtKw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaTnFGamdyb2paRzJSTlNr
+            MGx0RDJIUnI0bDgxNzVwbGZscThTMytZWFVvCnoyWFlWWlpvU2dKMk1yRU5Vd1kv
+            OFRCdm9OaXF6aVVmVHh2a0tJQ3hLSEUKLS0tIGorVlU3NjVROHdCR2JSUTBPV21v
+            TDRlSVRIZkYwWHBIcEk0Z2FZSXVVMDgKlC8S/0u/hCj9zcUF7uBIX1rgGG0NRszH
+            h3/WZGrRls9n4K/BwKPz1O7361fZmb7ZHQADRynm5WFFWQL+DQNngA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-24T11:26:02Z"
-    mac: ENC[AES256_GCM,data:2Op8WmGdhmDEVLhK/rjvPOisFCgRv3ALSh/xzn91qDc420THj/LcbJs38yDHjbCEiV7IKZN1ZGJabcLnE7dr2iAFQv1yDw2sOQZRgi1F5S8Rkne+9LHJUQebkDGIosZEG21OlZHqry/C+nzQAzBLfnUaC4+q+BMPGB9Nv59T+fs=,iv:nPowhfOL/IPvIRhqKJkU7wHf4UktPxU0O9igr0aqEg8=,tag:CE17ivopOiUnryqgMfZlnQ==,type:str]
+    lastmodified: "2026-02-24T11:57:40Z"
+    mac: ENC[AES256_GCM,data:7PGXg56fIdVYXWdM11bKUMMPA9WxDePCoFr/CnaJUeCjkqjzeW/Pbpno8LNOuPEolgZrPyzTC7V82lHrxhgtkwQUu312DBO6FdHyJIKGskXt+pWdKLVZh0JGbj4DHs9sD8p1pyev/C0JQEQ4HomCAbaD7EfUh4uXEfJuTDd7hTE=,iv:gStpCAtmP73hek/Qq+JUL0ay2wnB4fEgrUxP2DNg3Kw=,tag:h1KYoehkKTXpGTYqZBigvA==,type:str]
     encrypted_regex: ^(secrets|.*)$
     version: 3.11.0
