(fix): Forgejo secret not a table

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,9 +1,7 @@
 secrets:
-    forgejo-username:
+    forgejo-admin:
         username: ENC[AES256_GCM,data:85Uc0e0=,iv:t5lIcl7sx3nww4g7jwYqa5nPZLEGn1ilZcmn9PG1/3c=,tag:DMN6HosuRJigOAmKu5YSQw==,type:str]
-    forgejo-password:
         password: ENC[AES256_GCM,data:3eZwVH02GFEjStAVf9L6,iv://+srTBtS3WOtmF9cxebm7XldIVvSV90guBNM1StISo=,tag:Q2oygKEqDOokJcRQpGiaeQ==,type:str]
-    forgejo-email:
         email: ENC[AES256_GCM,data:ejbPEPoj/RxscvVnbPopAznQJKmgPA==,iv:zyD7gOVI/m7VVK+ygYVPbhNkXlvGrj8sclGAMu7U4Fg=,tag:g+7lr8VotdiEoNPPHGqwDQ==,type:str]
 sops:
     age:
