--- a/charts/forgejo/values.yaml
+++ b/charts/forgejo/values.yaml
@@ -1,15 +1,7 @@
 forgejo:
   gitea:
     admin:
-      username: 
-        secret: forgejo-username
-        key: username
-      password:
-        secret: forgejo-password
-        key: password
-      email:
-        secret: forgejo-email
-        key: email
+      existingSecret: forgejo-admin
   ingress:
     enabled: true
     className: nginx
