(chore): Change forgejo secret

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,20 +1,20 @@
 secrets:
     forgejo-admin:
-        username: ENC[AES256_GCM,data:85Uc0e0=,iv:t5lIcl7sx3nww4g7jwYqa5nPZLEGn1ilZcmn9PG1/3c=,tag:DMN6HosuRJigOAmKu5YSQw==,type:str]
-        password: ENC[AES256_GCM,data:3eZwVH02GFEjStAVf9L6,iv://+srTBtS3WOtmF9cxebm7XldIVvSV90guBNM1StISo=,tag:Q2oygKEqDOokJcRQpGiaeQ==,type:str]
-        email: ENC[AES256_GCM,data:ejbPEPoj/RxscvVnbPopAznQJKmgPA==,iv:zyD7gOVI/m7VVK+ygYVPbhNkXlvGrj8sclGAMu7U4Fg=,tag:g+7lr8VotdiEoNPPHGqwDQ==,type:str]
+        username: ENC[AES256_GCM,data:PWb929Y=,iv:vF/+o9t7VkjRe+RbiZujRSj97r1uBPZ2BwbEMCccwhY=,tag:zrVkdzp7v5e5rc9KHGmxbQ==,type:str]
+        password: ENC[AES256_GCM,data:2Co76VJeSMc7L4LjohWe,iv:cirX92wn/3mcAkd6VVbu2qHYF/8aivvG0rRFZICKWEU=,tag:uQ6qQ5DKy6dCz4vzEIP3ZA==,type:str]
+        email: ENC[AES256_GCM,data:jK4U7vlngO3sg7gZ6ibJtPFTcBhSyg==,iv:ByToAggbXyr9xxfjzV548gePjrXA7UOxkaSTrb9wAlc=,tag:7fYOTkRZYYTG84VS5pRe8g==,type:str]
 sops:
     age:
         - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaTnFGamdyb2paRzJSTlNr
-            MGx0RDJIUnI0bDgxNzVwbGZscThTMytZWFVvCnoyWFlWWlpvU2dKMk1yRU5Vd1kv
-            OFRCdm9OaXF6aVVmVHh2a0tJQ3hLSEUKLS0tIGorVlU3NjVROHdCR2JSUTBPV21v
-            TDRlSVRIZkYwWHBIcEk0Z2FZSXVVMDgKlC8S/0u/hCj9zcUF7uBIX1rgGG0NRszH
-            h3/WZGrRls9n4K/BwKPz1O7361fZmb7ZHQADRynm5WFFWQL+DQNngA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcGwrRllFbW5xSGoyVVJx
+            ZnU0bFZDWXhjcDUwTHEwa3JpZWpvdkxFNDJrCjNWRDhWdUZGZ1NFTmFUeUg2dS95
+            enFQN0ZZbEFCU204QTU5QjJjTnBvZ3cKLS0tIEFOdDRVN0RieVJRVzlsNnhHYXNo
+            WG1uZ3B4eWNTNVFrREMxR3UvU1NtcUUKt4EdMs092yK+PybAFUHspDgNz6eHWyw1
+            Y5TFJaMytROlAFiM3fqrU+QfFkUcw9gFv+I3xg/D1lUk1N3q9yJ+eg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-24T11:57:40Z"
-    mac: ENC[AES256_GCM,data:7PGXg56fIdVYXWdM11bKUMMPA9WxDePCoFr/CnaJUeCjkqjzeW/Pbpno8LNOuPEolgZrPyzTC7V82lHrxhgtkwQUu312DBO6FdHyJIKGskXt+pWdKLVZh0JGbj4DHs9sD8p1pyev/C0JQEQ4HomCAbaD7EfUh4uXEfJuTDd7hTE=,iv:gStpCAtmP73hek/Qq+JUL0ay2wnB4fEgrUxP2DNg3Kw=,tag:h1KYoehkKTXpGTYqZBigvA==,type:str]
+    lastmodified: "2026-02-25T11:35:37Z"
+    mac: ENC[AES256_GCM,data:XjCtCQGoPn7SVTJZTBVIPLGKEwzs5UDNlHuBH8Yua1YZd9NxqLFtW2unmqxFSO1JC+WDWQ5FK3vRwSvzm9ac1/eVRdA/466/iUB6cvZfvzCdH2sBXEHecS9zydHI+pjt8OxVFmSft2GM64SASQqjp7D0uWQs4Xi2KBp4tvDdNG0=,iv:vePhkfqTkgc4TftTOfT5MUiR40cLuk6zZyxBilwqK7w=,tag:ydbdXVikvjIcZilbXxz27A==,type:str]
     encrypted_regex: ^(secrets|.*)$
     version: 3.11.0
