(fix): Forgejo fix secrets (final)

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,20 +1,21 @@
-secrets:
-    forgejo-admin:
-        username: ENC[AES256_GCM,data:PWb929Y=,iv:vF/+o9t7VkjRe+RbiZujRSj97r1uBPZ2BwbEMCccwhY=,tag:zrVkdzp7v5e5rc9KHGmxbQ==,type:str]
-        password: ENC[AES256_GCM,data:2Co76VJeSMc7L4LjohWe,iv:cirX92wn/3mcAkd6VVbu2qHYF/8aivvG0rRFZICKWEU=,tag:uQ6qQ5DKy6dCz4vzEIP3ZA==,type:str]
-        email: ENC[AES256_GCM,data:jK4U7vlngO3sg7gZ6ibJtPFTcBhSyg==,iv:ByToAggbXyr9xxfjzV548gePjrXA7UOxkaSTrb9wAlc=,tag:7fYOTkRZYYTG84VS5pRe8g==,type:str]
+forgejo:
+  gitea:
+    admin:
+      username: ENC[AES256_GCM,data:hSoDlnQ=,iv:Xjj7gJP8bRkUU9RewLdcYmvttrFEGPOJgNEuW0ht5vE=,tag:CV0i1LYWvvxkFbmuhG7A4w==,type:str]
+      password: ENC[AES256_GCM,data:Sjfz4BzOPSpldcBsQ2pgew==,iv:n/U+nGE7FqHS6XZ8kDltRfaC5mI1MEH4zZocO0WoUjM=,tag:1xR08gTKzWAaXe4k0Atwig==,type:str]
+      email: ENC[AES256_GCM,data:SvVkYg2ZL4YD4db6+W56tS0UqHrbTQ==,iv:HmFcwEYwCVMs9Qiv4jIv9ot4q3liG5Rr2fxSCGXgcKw=,tag:pAVDtUC/TU/OjThmzCvz0A==,type:str]
 sops:
-    age:
-        - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcGwrRllFbW5xSGoyVVJx
-            ZnU0bFZDWXhjcDUwTHEwa3JpZWpvdkxFNDJrCjNWRDhWdUZGZ1NFTmFUeUg2dS95
-            enFQN0ZZbEFCU204QTU5QjJjTnBvZ3cKLS0tIEFOdDRVN0RieVJRVzlsNnhHYXNo
-            WG1uZ3B4eWNTNVFrREMxR3UvU1NtcUUKt4EdMs092yK+PybAFUHspDgNz6eHWyw1
-            Y5TFJaMytROlAFiM3fqrU+QfFkUcw9gFv+I3xg/D1lUk1N3q9yJ+eg==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-25T11:35:37Z"
-    mac: ENC[AES256_GCM,data:XjCtCQGoPn7SVTJZTBVIPLGKEwzs5UDNlHuBH8Yua1YZd9NxqLFtW2unmqxFSO1JC+WDWQ5FK3vRwSvzm9ac1/eVRdA/466/iUB6cvZfvzCdH2sBXEHecS9zydHI+pjt8OxVFmSft2GM64SASQqjp7D0uWQs4Xi2KBp4tvDdNG0=,iv:vePhkfqTkgc4TftTOfT5MUiR40cLuk6zZyxBilwqK7w=,tag:ydbdXVikvjIcZilbXxz27A==,type:str]
-    encrypted_regex: ^(secrets|.*)$
-    version: 3.11.0
+  age:
+    - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOMHFzRkFEVGdMUGYrWThJ
+        RUx4MjJ0bXpDNHVnY3lpRjZNYlRnQTBGTGd3CnBCNU1OaHQ1MDYxYTU5OVF1NHp3
+        NGtKbzBmTUx1RVZrN2d3QXZPSW0vV0kKLS0tIHBUbG9IM3F0eTVXaHhyWTR6SkN1
+        Z0Y5NjVZeXh5ei9aaTVIcVVQOXQ5cmcKqhEd0I2dHkBqiOdjBhhonINEQTwtgTpT
+        B0w1v3e44TJTle8MDqQYt+UTX6E73zvK0yNC3xOiNwF+xLemmUFipw==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2026-02-25T11:43:37Z"
+  mac: ENC[AES256_GCM,data:apAquX8+m5RLzPBeGkvK9eSc4EznfYuZu7cfYR6copHifraIWhKpxFQ/1rZs19blbmdZ81UIbRoSRVKDjbzc/WNx0YBmEWEb2dKQa7fZlmuXM+lmqqWJqxJaHmUAiDStwOAJPHNcQ87IHUVkmKhPzOheWj4lpWOReOawVnn7pC4=,iv:8856nzbuPTX8tflNhtNIMHEFkmwokI5lhPJ8aG5lbgc=,tag:TYFFJ5KCGC4ut9hIjnjwrA==,type:str]
+  encrypted_regex: ^(secrets|.*)$
+  version: 3.11.0
