(chore): Phase out the secrets

--- a/charts/forgejo/secrets.yaml
+++ b/charts/forgejo/secrets.yaml
@@ -1,21 +1,21 @@
 forgejo:
-  gitea:
-    admin:
-      username: ENC[AES256_GCM,data:hSoDlnQ=,iv:Xjj7gJP8bRkUU9RewLdcYmvttrFEGPOJgNEuW0ht5vE=,tag:CV0i1LYWvvxkFbmuhG7A4w==,type:str]
-      password: ENC[AES256_GCM,data:Sjfz4BzOPSpldcBsQ2pgew==,iv:n/U+nGE7FqHS6XZ8kDltRfaC5mI1MEH4zZocO0WoUjM=,tag:1xR08gTKzWAaXe4k0Atwig==,type:str]
-      email: ENC[AES256_GCM,data:SvVkYg2ZL4YD4db6+W56tS0UqHrbTQ==,iv:HmFcwEYwCVMs9Qiv4jIv9ot4q3liG5Rr2fxSCGXgcKw=,tag:pAVDtUC/TU/OjThmzCvz0A==,type:str]
+    gitea:
+        admin:
+            username: ENC[AES256_GCM,data:c1lgoRTEUvcN,iv:1nMKAotJJi0dclVBVQJXKpJsntcMRMdN9tQVxv6vy/c=,tag:p32AETD2F033uQFIKjhOzQ==,type:str]
+            password: ENC[AES256_GCM,data:REcc8dJbDhLhq1q+ObWIUitORGpHsRCfJ9QW,iv:PAoj2pvTJqpObD84Q1Es1UAI/mDjcJD4cW2s6U2Akyc=,tag:xxH8Yo76CH7eZKG9ZDgaqg==,type:str]
+            email: ENC[AES256_GCM,data:Jrs92fhN0IAmMivN0fIGxtz8+UIkmQ==,iv:qnVvCkA3eICp2+F4KcYNQoiBViPc3dpCnPYAmzw5b4U=,tag:H4ZO01RW0Z4Hz9SD8EkrNA==,type:str]
 sops:
-  age:
-    - recipient: age14x7jgxf0t2dfmquw6cenec5c7lqryzcvd0cxv85xlwtzafdcr9eql0vmm3
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOMHFzRkFEVGdMUGYrWThJ
-        RUx4MjJ0bXpDNHVnY3lpRjZNYlRnQTBGTGd3CnBCNU1OaHQ1MDYxYTU5OVF1NHp3
-        NGtKbzBmTUx1RVZrN2d3QXZPSW0vV0kKLS0tIHBUbG9IM3F0eTVXaHhyWTR6SkN1
-        Z0Y5NjVZeXh5ei9aaTVIcVVQOXQ5cmcKqhEd0I2dHkBqiOdjBhhonINEQTwtgTpT
-        B0w1v3e44TJTle8MDqQYt+UTX6E73zvK0yNC3xOiNwF+xLemmUFipw==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-02-25T11:43:37Z"
-  mac: ENC[AES256_GCM,data:apAquX8+m5RLzPBeGkvK9eSc4EznfYuZu7cfYR6copHifraIWhKpxFQ/1rZs19blbmdZ81UIbRoSRVKDjbzc/WNx0YBmEWEb2dKQa7fZlmuXM+lmqqWJqxJaHmUAiDStwOAJPHNcQ87IHUVkmKhPzOheWj4lpWOReOawVnn7pC4=,iv:8856nzbuPTX8tflNhtNIMHEFkmwokI5lhPJ8aG5lbgc=,tag:TYFFJ5KCGC4ut9hIjnjwrA==,type:str]
-  encrypted_regex: ^(secrets|.*)$
-  version: 3.11.0
+    age:
+        - recipient: age1vsy9s6dvp03zu0zrwflrxy3fxg8jh6rns4rjaktarnhk7u9yngvs3qmh9c
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzZXo0ZTVLN1RieFdDbFVR
+            SEVUUFd3T2NGREVoOC9HTloxemxZMTFFS2swCi9nbFRGQ2pJQWVKNUY2VTFPSDh1
+            UjlWUXdHUjY0TGl1dkRURnV4TXoyQTgKLS0tIC9UdjlLUHJ4RWcrb21hMUlxUmg4
+            cHU0bnFLbGR4bFBHQ0pIZHVJSTJXYWsKU3vGFkXdtWusZwnHp5ZKXOu0obSjY7xU
+            j6eI72NVaoPWbVb+B5Wv9bTQDIYTN4MaR9maVoBMPASPufFuuwmLIA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-02-26T13:47:08Z"
+    mac: ENC[AES256_GCM,data:oy+mjWVkBen4Zp16sAXSWdqQKJxf7feAkiDiff5riIYsTv/ZNO5ybZ0STE4SJGakGBhbEGYObeKmKFxhs9U2cO5vMzcTPzgyN5piKvd3FA4gRIv0SjGSXejgCDsV4+V7Su70emXvMr0A7Xr8iRAdLxmA+Xro10cMakWDQwNjn2s=,iv:HNBDKw20JfNAw7cB5F923I/3gf2kfiH5IutJImnf4Z0=,tag:b5CAfAFu93LiJ5+RAxbJWw==,type:str]
+    encrypted_regex: ^(secrets|.*)$
+    version: 3.11.0
