--- a/charts/authentik/values.yaml
+++ b/charts/authentik/values.yaml
@@ -1,19 +1,36 @@
 authentik:
   authentik:
+    secret_key: "CHANGE_ME_TO_A_LONG_RANDOM_STRING"
     error_reporting:
       enabled: false
   postgresql:
     enabled: true
-  server:
-    ingress:
+    auth:
+      database: authentik
+      username: authentik
+      password: "an-actual-secure-password"
+    persistence:
       enabled: true
-      className: nginx
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-issuer
-        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-      hosts:
-        - auth.daglesia.com
-      tls:
-      - secretName: authentik-tls
+      size: 8Gi
+  redis:
+    enabled: true
+    architecture: standalone
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    hosts:
+      - host: auth.daglesia.com
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: authentik-tls-cert
         hosts:
           - auth.daglesia.com
+  server:
+    resources:
+      requests:
+        cpu: 100m
+        memory: 512Mi
+      limits:
+        memory: 2Gi
